--- a/src/Indexpage/index.css
+++ b/src/Indexpage/index.css
@@ -2,7 +2,8 @@
 
 * {
     margin: 0;
-    padding: 0
+    padding: 0;
+    box-sizing: border-box;
 }
 
 
@@ -222,10 +223,6 @@ hr {
         max-width: 800px;
         margin: 2rem auto;
 
-    }
-
-    hr {
-        margin: 0 7vw;
     }
 
     .twitter-username,
