--- a/src/contactpage/contact.css
+++ b/src/contactpage/contact.css
@@ -2,7 +2,8 @@
 
 *, input{
     margin: 0;
-    padding: 0
+    padding: 0;
+    box-sizing: border-box;
 }
 
 
@@ -17,26 +18,22 @@ body{
 
 .form-container{
     margin: 0 1rem 4.5rem 1rem;
-    
 }
 
 form{
-    border: 2px solid red;
+    /* border: 2px solid red; */
     display: grid;
     grid-template-rows: repeat(6 1fr);
-
-}
-.form-grid-item{
-    width: 90%;
-    text-align: left;
+    gap: .6rem
 
 }
 
-.contactMe-header{
+.contactMe-heading{
     color: #101828;
     font-size: 1.5rem;
     font-weight: 600;
     margin-bottom: .7rem;
+    
 }
 
 .header-message{
@@ -51,26 +48,31 @@ label{
 }
 
 .agreement-label{
-    color: #475467;
+    color: #667085;
     font-weight: 400;
+    font-size: .75rem;
 }
 
 ::placeholder{
     color: #667085;
+    font-size: .8rem;
     
 }
 
-input,textarea{
-    color: #101828;
-    border: 1px solid #D0D5DD;
-}
-
-input, textarea, button{
+input,
+textarea,
+button {
     border-radius: 4px;
     padding: 8px;
     margin-top: 6px;
     margin-bottom: 4px;
     width: 100%;
+}
+
+input,
+textarea{
+    color: #101828;
+    border: 1px solid #D0D5DD;
 }
 
 button{
@@ -82,6 +84,48 @@ button{
     color: white;
 }
 
-.checkbox-input{
+.checkbox-div {
+    /* border: 1px solid #D0D5DD; */
+}
+
+.agreement-label .checkbox-input{
+    display: none;
+}
+
+.checkbox-replacement{
+     height: 15px;
+     width: 15px;
+     border: 1px solid #D0D5DD;
+     display: inline-block;
+     border-radius: 2px;
+     position: relative;
+     
+}
+
+[type=checkbox]:checked + .checkbox-replacement:before {
+    content: '/src/assets/check-icon.svg';
+    position: absolute;
+    top: -5px;
+    left: 0;
+}
+
+@media (min-width: 425px) {
+    .ContactPage-header{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 4rem 7vw 2.5rem 7vw;
+        max-width: 650px;
+        border: 1px solid red;
+    }
+
+    .form-container {
+        display: flex;
+        justify-content: center;
+        margin: 0 7vw 5rem 7vw;
+        max-width: 650px;
+    }
+
+
 
 }
