--- a/src/contactpage/contact.css
+++ b/src/contactpage/contact.css
@@ -9,22 +9,33 @@
 
 body{
     font-family: Geneva, Tahoma, sans-serif;
-
+    overflow-x: hidden;
 }
 
 .ContactPage-header {
+    border: 2px solid red;
+    display: flex;
+    justify-content: center;
+
+}
+
+.ContactPage-header div{
     margin: 3rem 1rem 2.5rem 1rem;
+    width: 100%;
 }
 
 .form-container{
-    margin: 0 1rem 4.5rem 1rem;
+    display: flex;
+    justify-content: center;
+    border: 2px solid red;
 }
 
 form{
-    /* border: 2px solid red; */
+    margin: 0 1rem 4.5rem 1rem;
     display: grid;
     grid-template-rows: repeat(6 1fr);
-    gap: .6rem
+    gap: .6rem;
+    width:100%
 
 }
 
@@ -110,20 +121,16 @@ button{
 }
 
 @media (min-width: 425px) {
-    .ContactPage-header{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        margin: 4rem 7vw 2.5rem 7vw;
-        max-width: 650px;
+    .ContactPage-header div{
+        margin: 4rem 10vw 2.5rem 10vw;
+        max-width: 600px;
         border: 1px solid red;
     }
 
-    .form-container {
-        display: flex;
-        justify-content: center;
-        margin: 0 7vw 5rem 7vw;
-        max-width: 650px;
+    form {
+        margin: 0 10vw 5rem 10vw;
+        max-width: 600px;
+        grid-template-columns: 1fr 1fr;
     }
 
 
