style: grid span for last 4 divs in form

--- a/src/contactpage/contact.css
+++ b/src/contactpage/contact.css
@@ -132,6 +132,12 @@ button{
         max-width: 600px;
         grid-template-columns: 1fr 1fr;
     }
+    
+    .email-div, .message-div, .checkbox-div, .submit-div{
+        grid-column: span 1/-1
+    }
+
+
 
 
 
