--- a/src/contactpage/contact.css
+++ b/src/contactpage/contact.css
@@ -134,7 +134,7 @@ button{
     }
     
     .email-div, .message-div, .checkbox-div, .submit-div{
-        grid-column: span 1/-1
+        grid-column: span 2
     }
 
 
