--- a/src/contactpage/contact.css
+++ b/src/contactpage/contact.css
@@ -13,7 +13,7 @@ body{
 }
 
 .ContactPage-header {
-    border: 2px solid red;
+    /*border: 2px solid red;*/
     display: flex;
     justify-content: center;
 
@@ -27,14 +27,14 @@ body{
 .form-container{
     display: flex;
     justify-content: center;
-    border: 2px solid red;
+    
 }
 
 form{
     margin: 0 1rem 4.5rem 1rem;
     display: grid;
     grid-template-rows: repeat(6 1fr);
-    gap: .6rem;
+    gap: .6rem;{}
     width:100%
 
 }
@@ -95,6 +95,23 @@ button{
     color: white;
 }
 
+button:hover{
+
+    border:1px solid #175CD3;
+    background:#175CD3
+}
+
+button:focus{
+    box-shadow:0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #D1E9FF;
+}
+
+button:disabled{
+    background: #B2DDFF;
+    border:1px solid #B2DDFF;
+}
+
+
+
 .checkbox-div {
     /* border: 1px solid #D0D5DD; */
 }
@@ -114,18 +131,51 @@ button{
 }
 
 [type=checkbox]:checked + .checkbox-replacement:before {
-    content: '/f00c';
+    content: '\f00c';
     position: absolute;
     top: -8px;
     left: 0;
     color:#1570EF
+
 }
+
+.checkbox-replacement:hover{
+    border:;
+    box-shadow:;
+    color:;
+    background:;
+}
+
+.checkbox-replacement:focus{
+    border:;
+
+    box-shadow:;
+
+    color:;
+
+    background:;
+}
+  
+
+ 
+
+
+
+
+.checkbox-replacement:disabled{
+    border:;
+    box-shadow:;
+    color:;
+    background:;
+}
+
+
 
 @media (min-width: 425px) {
     .ContactPage-header div{
         margin: 4rem 10vw 2.5rem 10vw;
         max-width: 600px;
-        border: 1px solid red;
+        /*border: 1px solid red;*/
     }
 
     form {
