style: check box state update

--- a/src/contactpage/contact.css
+++ b/src/contactpage/contact.css
@@ -140,7 +140,7 @@ button:disabled{
 }
 
 .checkbox-replacement:hover{
-    border:#175CD3;
+    border:1px solid #175CD3;
     box-shadow:;
     color:;
     background:;
