--- a/src/contactpage/contact.css
+++ b/src/contactpage/contact.css
@@ -85,6 +85,22 @@ textarea{
     border: 1px solid #D0D5DD;
 }
 
+textarea:focus{
+    outline: none;
+    border: 1px solid #84CAFF;
+    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #D1E9FF;
+}
+
+textarea{
+    resize: none;
+}
+
+input:focus{
+    outline: none;
+    border: 1px solid #84CAFF;
+    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+}
+
 button{
     background: #1570EF;
     border: 1px solid #1570EF;
@@ -94,19 +110,19 @@ button{
     color: white;
 }
 
-button:hover{
+button:hover {
 
-    border:1px solid #175CD3;
-    background:#175CD3
+    border: 1px solid #175CD3;
+    background: #175CD3
 }
 
-button:focus{
-    box-shadow:0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #D1E9FF;
+button:focus {
+    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #D1E9FF;
 }
 
-button:disabled{
+button:disabled {
     background: #B2DDFF;
-    border:1px solid #B2DDFF;
+    border: 1px solid #B2DDFF;
 }
 
 
