--- a/src/contactpage/contact.css
+++ b/src/contactpage/contact.css
@@ -145,10 +145,10 @@ button:disabled {
 }
 
 [type=checkbox]:checked + .checkbox-replacement:before {
-    content: '\f00c';
+    content: url("/src/assets/check-icon.svg");
     position: absolute;
-    top: 0;
-    left: 3px;
+    top: 1px;
+    left: 1px;
     color:#1570EF
 
 }
